syntax = "proto3";

package manager;

import "distribution.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./pb";

message InstanceLimits {
  google.protobuf.Duration shutdown_after_idle = 1;
  bool auto_shutdown = 2;
  int32 max_players = 3;
  uint32 cpu = 4;
  uint64 ram = 5;
}

message InstanceConfig {
  string difficulty = 1;
  string admin = 2;
  uint32 port = 3;
  uint32 view_distance = 4;
  uint32 simulation_distance = 5;
  bool allow_pirate = 6;
  bool pvp = 7;
}

enum InstanceState {
  STATE_OFFLINE = 0;
  STATE_STARTING = 1;
  STATE_RUNNING = 2;
  STATE_SHUTTING_DOWN = 3;
}
